# rqrr

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: CI.yaml
benches/: bench_cap_find.rs  bench_prepare.rs
examples/: debug_caps.rs  debug_full.rs
src/: decode.rs  detect.rs  galois.rs  geometry.rs  identify.rs  lib.rs  prepare.rs  version_db.rs
src/identify/: capstone.rs  grid.rs  helper.rs  image.rs  match_capstones.rs  mod.rs
tests/: test_cap_find.rs  test_decode.rs  test_errors.rs  test_full.rs  test_identify.rs  test_load.rs
