[package]
name = "rqrr-altered"
edition = "2021"
rust-version = "1.74.0"
version = "0.7.2"
authors = ["WanzenBug <moritz@wanzenbug.xyz>", "Erion Leka <erionleka1709@gmail.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rqrr/"
repository = "https://github.com/bompidom/rqrr"
readme = "./README.md"
keywords = ["qrcode", "detection"]
description = """
Detect and read QR codes from any image source
"""
categories = [
    "graphics",
    "encoding",
]


[features]
img = ["image"]
default = ["img"]

[[bench]]
name = "bench_cap_find"
path = "benches/bench_cap_find.rs"
required-features = ["img"]
harness = false

[dev-dependencies]
criterion = "0.5"
image = { version = "0.25" }

[dependencies]
g2p = "1.0"
lru = "0.12"
image = { version = "0.25", optional = true, default-features = false }
