[package]
name = "rqrr"
edition = "2021"
rust-version = "1.64.0"
version = "0.8.0"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/rqrr/"
repository = "https://github.com/WanzenBug/rqrr"
readme = "./README.md"
keywords = ["qrcode", "detection"]
description = """
Detect and read QR codes from any image source
"""
categories = [
    "graphics",
    "encoding",
]


[features]
img = ["image"]
default = ["img"]

[[bench]]
name = "bench_cap_find"
path = "benches/bench_cap_find.rs"
required-features = ["img"]
harness = false

[dev-dependencies]
criterion = "0.5"
image = { version = "0.25" }

[dependencies]
g2p = "1.0"
lru = "0.12"
image = { version = "0.25", optional = true, default-features = false }
