[package]
name = "rqrr"
edition = "2021"
version = "0.10.1"
authors = ["WanzenBug <moritz@wanzenbug.xyz>"]
license = "(MIT OR Apache-2.0) AND ISC"
documentation = "https://docs.rs/rqrr/"
repository = "https://github.com/WanzenBug/rqrr"
readme = "./README.md"
keywords = ["qrcode", "detection"]
description = """
Detect and read QR codes from any image source
"""
categories = [
    "graphics",
    "encoding",
]
include = [
    "/README.md",
    "/LICENSE-*",
    "/src/**/*.rs",
    "/src/**/*.png",
]
rust-version = "1.85.1"

[features]
img = ["image"]
default = ["img"]

[[bench]]
name = "bench_cap_find"
path = "benches/bench_cap_find.rs"
required-features = ["img"]
harness = false

[dev-dependencies]
#criterion = "0.5"
image = { version = ">= 0.24, <= 0.25", default-features = false, features = ["png", "jpeg", "gif"] }

[dependencies]
g2p = "1.0"
lru = "0.18"
image = { version = ">= 0.24, <= 0.25", optional = true, default-features = false }
